# solana-backend-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
solana-data-demo/: Cargo.toml
solana-data-demo/examples/: get_accounts.rs  get_transcation.rs  parse_event.rs  parse_transaction.rs  spl_metadata.rs  spl_metadata_token2022.rs  ws_connect.rs  ws_connect_blocking.rs
solana-data-demo/idls/: example.json  red_packet.json
solana-data-demo/src/: main.rs
