[package]
name = "solana-data-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.7"
solana-transaction-status-client-types = "2.2.7"
solana-sdk = "2.2.2"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"

#solana-client = { workspace = true }
#solana-transaction-status-client-types = { workspace = true }
#solana-sdk = { workspace = true }
#tokio = { workspace = true }
#anyhow = { workspace = true }
