[package]
name = "solana-data-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.7"
solana-transaction-status-client-types = "2.2.7"
solana-sdk = "2.2.2"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3.31"
tokio-tungstenite = "0.20.1"
url = "2.5.4"
serde_json = "1.0.140"
time = "0.3.41"

#solana-client = { workspace = true }
#solana-transaction-status-client-types = { workspace = true }
#solana-sdk = { workspace = true }
#tokio = { workspace = true }
#anyhow = { workspace = true }
